Fix jumping heights

--- a/partials/_answer.scss
+++ b/partials/_answer.scss
@@ -3,12 +3,20 @@
 
 .icon-correct--answer {
   display: none;
-  margin-left: auto;
+  position: absolute;
+  top: 50%;
+  right: 2%;
+
+  transform: translateY(-50%);
 }
 
 .icon-incorrect--answer {
   display: none;
-  margin-left: auto;
+  position: absolute;
+  top: 50%;
+  right: 2%;
+
+  transform: translateY(-50%);
 }
 
 .quiz-section--answers input[type="radio"]:checked + .quiz-item {
