--- a/partials/_quiz-list.scss
+++ b/partials/_quiz-list.scss
@@ -14,6 +14,9 @@
 }
 
 .quiz-item {
+  position: relative;
+  min-height: var(--h-quiz-item);
+
   display: flex;
   align-items: center;
   gap: var(--sp-2);
@@ -31,6 +34,10 @@
 
   @media (min-width: $bp-desktop) {
     padding: var(--sp-3);
+  }
+
+  .logo-container {
+    flex-shrink: 0;
   }
 }
 
