--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,8 @@
   --bs-inline-orange: inset 0 0 0 3px var(--clr-orange-2);
   --bs-inline-green: inset 0 0 0 3px var(--clr-green-2);
   --bs-inline-red: inset 0 0 0 3px var(--clr-red-1);
+  --h-question-text: 4.5rem;
+  --h-quiz-item: 5.625rem;
 }
 @media (min-width: 48rem) {
   :root {
@@ -83,67 +85,6 @@
   }
 }
 
-/**
-
-TODO: trebuie extrase niste denumiri de variabile pentru perechile astea de culori si schimbata valoare variabilei in functie de tema
-
-Pentru schimbarea de teme:
-
-img decoratiune background diferit: desktop / tablet / mobile dar si dark / light
-
-----------------------------  Start menu Light vs Dark:
-
-img decoratiune
-culoare background: --clr-grey-1 vs --clr-blue-6
-culoare items background:  white vs --clr-blue-5
-culoare items text : --clr-blue-6 vs white
-culoare title: --clr-blue-6 vs white
-culoare title label scris mic ("question 6 of 10"): --clr-grey-2 vs --clr-blue-3
-
-culoare categorie title: clr-blue-6 vs white 
-
-culoare   theme switcher: clr-grey-2 vs white
-
-----------------------------   Question:
-
-Question 6 of 10 (label intrebare) - diferenta: --clr-grey-2 vs --clr-blue-3
-culoare text continut varianta: --clr-blue-6 vs white
-culoare title intrebare: clr-blue-6 vs white
-
-----------------------------   Active and hover:
-
-nu vad diferente 
-
-----------------------------   Correct answer:
-
-nu vad diferente 
-
-
-----------------------------   Incorrect answer:
-
-nu vad diferente 
-
-
-----------------------------   No answer selected:
-
-culoarea textului erorii "Please select an answer" difera, dar nu stiu daca as schimba-o: --clr-red   vs --clr-grey-1
-
-----------------------------   Score:
-
-culoare tab score background :white vs --clr-blue-5
-culoare score category label: --clr-blue-6 vs white
-culoare score text: --clr-blue-6 vs white
-culoare score label ("out of 10") // diferente similare ca in primul ecran: --clr-grey-2 vs --clr-blue-3
-
-
-
-background
-item background
-text color
-label color
-theme-switcher-color
-
-**/
 /* Light theme */
 .theme-light {
   --clr-bg: var(--clr-grey-1);
@@ -697,6 +638,8 @@ body {
 }
 
 .quiz-item {
+  position: relative;
+  min-height: var(--h-quiz-item);
   display: flex;
   align-items: center;
   gap: var(--sp-2);
@@ -716,6 +659,9 @@ body {
     padding: var(--sp-3);
   }
 }
+.quiz-item .logo-container {
+  flex-shrink: 0;
+}
 
 .item-title {
   color: var(--clr-text);
@@ -726,6 +672,7 @@ body {
   line-height: var(--lh-3);
   font-weight: var(--fw-medium);
   color: var(--clr-text);
+  min-height: var(--h-question-text);
   margin-block-end: var(--sp-3);
 }
 @media (min-width: 48rem) {
@@ -762,12 +709,18 @@ body {
 
 .icon-correct--answer {
   display: none;
-  margin-left: auto;
+  position: absolute;
+  top: 50%;
+  right: 2%;
+  transform: translateY(-50%);
 }
 
 .icon-incorrect--answer {
   display: none;
-  margin-left: auto;
+  position: absolute;
+  top: 50%;
+  right: 2%;
+  transform: translateY(-50%);
 }
 
 .quiz-section--answers input[type=radio]:checked + .quiz-item {
